fix(sequelize): add .sequlizerc to solve sequelize configs issues
