# src/index.js
@@ -13,10 +13,9 @@ import swaggerDocument from '../public/api-docs.json';
 
 import { sequelize } from "./models/index";
 import tripRouter from "../src/routes/trip.routes";
-import userRouter from './routes/user.routes';
-import rolesRouter from './routes/role.routes';
-import companiesRouter from './routes/company.routes';
-import bookingsRouter from './routes/booking.routes';
+import userRouter from "../src/routes/user.routes";
+import rolesRouter from "../src/routes/role.routes";
+import feedbackRouter from './routes/feedback.routes';
 import accommodationRouter from './routes/accommodation.routes';
 
 const app = express();
@@ -36,6 +35,7 @@ app.use('/api/v1/roles', rolesRouter);
 app.use('/api/v1/companies', companiesRouter);
 app.use('/api/v1/bookings', bookingsRouter);
 app.use('/api/v1/accommodations', accommodationRouter);
+app.use('/api/v1/feedback', feedbackRouter);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 app.get('/', (req, res) => {
